places api key complete

--- a/flutter_google_map_app/pubspec.yaml
+++ b/flutter_google_map_app/pubspec.yaml
@@ -44,6 +44,12 @@ dependencies:
   # GetX
   get: ^4.7.2
 
+  # google_geocoding
+  google_geocoding_api: ^1.5.2
+
+  # Http
+  http: ^1.4.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
